--- a/public/styles/timeline.css
+++ b/public/styles/timeline.css
@@ -84,7 +84,7 @@
   .compose-and-view {
     display: flex;
     flex-direction: column;
-    margin-top: -0.5em;
+    margin-top: 1.5em;
   }
 
   .all-users-tweets {
